[package]
name = "rina-pp"
version = "0.9.18"
authors = ["MaxOhn <ohn.m@hotmail.de>", "Aoba Suzukaze <aoba@rina.place>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/osuthailand/rina-pp"
documentation = "https://docs.rs/rosu-pp/"
description = "osu! difficulty and pp calculation for all modes"
keywords = ["osu", "pp", "stars", "async"]

[features]
default = []
async_std = ["async-std"]
async_tokio = ["tokio"]

[dependencies]
async-std = { version = "1.9", optional = true }
tokio = { version = "1.2", optional = true, default-features = false, features = ["full"] }
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio" ] }

[dev-dependencies]
tokio = { version = "1.2", default-features = false, features = ["fs", "rt"] }
