[package]
name = "rina-pp"
version = "0.9.24"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>", "Simon G."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/osuthailand/rina-pp"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = ["compact_strains"]
compact_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rosu-map = { version = "0.1.1" }
mysql = "*"

[dev-dependencies]
proptest = "1.4.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3